--- a/character.html
+++ b/character.html
@@ -1,3 +1,15 @@
-<h1>Hey! I'm a big heading.</h1>
-<p>Hey! I'm a paragraph element.</p>
-<a href="https://google.com" target="_blank" title="Let's go to Google!">Click me! I'm a link!</a>
+<!DOCTYPE html>
+<html>
+<head>
+	<title>Test page</title>
+</head>
+<body>
+	<h1>Hey! I'm a big heading.</h1>
+	<p>Hey! I'm a <i>paragraph</i> element.</p>
+	<a href="https://google.com" target="_blank" title="Let's go to Google!">Click me! I'm a link!</a>
+	<p>My name is:<br>
+	Bob</p>
+	<img src="img/cat.jpeg">
+	<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3a/Cat03.jpg/1200px-Cat03.jpg">
+</body>
+</html>
